[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Audio/randomPitch.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/footstep.wav" type="AudioStream" id=3]
[ext_resource path="res://Enemies/Enemy_flying.ogg" type="AudioStream" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -80.5574, 170.197, 0, 0, 0, 0, -80.5574, 170.197, 0, 0, 0, 0, -80.5574, 170.197, 0, 0, 0, 0, 93.5848, 168.866 )
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 15.8134, 16.2055 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 38.3767, 36.5009 )

[sub_resource type="StreamTexture" id=4]

flags = 0
load_path = ""

[node name="Enemy" type="Node2D" index="0" groups=[
"Enemies",
]]

script = ExtResource( 1 )
mothsound = false
movespeed = 2
pathLooped = true

[node name="EnemyPath" type="Path2D" parent="." index="0"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 81.2339, -169.313 )
curve = SubResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Enemy" type="Node2D" parent="EnemyPath" index="0"]

position = Vector2( -81.2339, 169.313 )
z_index = 50
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="StaticBody2D" type="StaticBody2D" parent="EnemyPath/Enemy" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyPath/Enemy/StaticBody2D" index="0"]

position = Vector2( -0.219439, -0.0857986 )
scale = Vector2( 1.01166, 0.991932 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="EnemyPath/Enemy" index="1"]

position = Vector2( -80.7138, 170.143 )
rotation = -0.000132151
scale = Vector2( 0.500416, 0.500855 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyPath/Enemy/Area2D" index="0"]

position = Vector2( 160.85, -339.858 )
scale = Vector2( 0.953475, 0.964443 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Sprites" type="Node2D" parent="EnemyPath/Enemy" index="2"]

position = Vector2( 0.00422668, 0.00424194 )
rotation = -0.000132151

[node name="Sprite" type="Sprite" parent="EnemyPath/Enemy/Sprites" index="0"]

modulate = Color( 1, 0, 0, 1 )
position = Vector2( -1.91231, -9.29032 )
scale = Vector2( 0.0624163, 0.0870892 )
texture = SubResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="muddySound" parent="EnemyPath/Enemy" index="3" instance=ExtResource( 2 )]

stream = ExtResource( 3 )

[node name="mothSound" type="AudioStreamPlayer2D" parent="EnemyPath/Enemy" index="4"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="PathFollow2D" type="PathFollow2D" parent="EnemyPath" index="1"]

position = Vector2( -80.5574, 170.197 )
rotation = -0.0076473
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="EnemyPath/Enemy/Area2D" to="." method="_on_Area2D_body_entered"]


